--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ name = "data_seeker"
 async-graphql = "5.0.4"
 sea-orm = { version = "0.10.2", features = [
   "sqlx-postgres",
-  "runtime-tokio-native-tls",
+  "runtime-tokio-rustls",
   "macros",
   "debug-print",
   "mock",
@@ -25,8 +25,12 @@ futures = "0.3.25"
 config = "0.13.2"
 serde = { version = "1.0.147", features = ["derive"] }
 lazy_static = "1.4.0"
-axum = "0.6.1"
+axum = { version = "0.6.1", features = ["headers"] }
 tokio = { version = "1", features = ["full"] }
 hyper = { version = "0.14", features = ["full"] }
 tower-http = { version = "0.3", features = ["full"] }
 tower = { version = "0.4.13", features = ["full"] }
+dotenvy = "0.15.6"
+validator = { version = "0.16.0", features = ["derive"] }
+thiserror = "1.0.38"
+async-trait = "0.1.61"
