--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -3,9 +3,9 @@ run-name: ${{ github.actor }} is running general actions
 
 on:
   push:
-    branches: [$default-branch, $protected-branches]
+    branches: [main, $protected-branches]
   pull_request:
-    branches: [$default-branch]
+    branches: [main]
 
 jobs:
   test:
